<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    android:screenOrientation="portrait"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.gateconnect.MainScreen">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/airplane_main_background"
        android:id="@+id/airplane_main_background"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/airplane_in_background" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:id="@+id/logo"
        android:src="@drawable/logo_gate_connect_title"
        android:contentDescription="@string/app_name"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/airplane_main_background_top"
        android:id="@+id/airplane_main_background_top"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/app_name"
        />

    <!--Airport Select-->
    <Spinner
        android:id="@+id/airport_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:entries="@array/airport_selection" />

    <!--Go to Map Button-->
    <Button
        android:id="@+id/goButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/airport_select"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="32dp"
        android:onClick="onClick"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/button" />

</RelativeLayout>
